--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test</title>
 </head>
+<style>
+  .h1 {
+font-family: 'Comic Sans MS', sans-serif
+  }
+</style>
 <body>
-  Hello World!
+  <h1>Hello World!</h1>
 </body>
 </html>
