--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@ font-family: 'Comic Sans MS', sans-serif
   }
 </style>
 <body>
-  <h1>Hello World!</h1>
+  <h1>Hey, it's hnqcjw!</h1>
+  <p>This is my GitHub page for all my projects!</p>
+  <a href="https://github.com/hnqcjw">Go Check out my GitHub profile</a>
+<br/><br/>
+  <a href="./icy.zip" download>Download the latest version of my open source C-Like lightweight programming language, Icy</a><br/>
+  <a href="https://github.com/hnqcjw/SophieTheMaid">Check out a bash-scripted chatbot, SophieTheMaid</a>
+  
+  <h2>Have a good day!</h2>
 </body>
 </html>
