--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test</title>
+  <title>hnqcjw's website</title>
 </head>
 <style>
   h1 {
 font-family: 'Comic Sans MS', sans-serif
+  }
+  body {
+    background-color: blue;
   }
 </style>
 <body>
