--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
   <title>hnqcjw's website</title>
 </head>
 <style>
-  h1 {
-font-family: 'Comic Sans MS', sans-serif
-  }
   body {
-    background-color: blue;
+    font-family: 'Comic Sans MS', sans-serif
+    background-color: red;
   }
 </style>
 <body>
@@ -18,7 +16,7 @@ font-family: 'Comic Sans MS', sans-serif
   <p>This is my GitHub page for all my projects!</p>
   <a href="https://github.com/hnqcjw">Go Check out my GitHub profile</a>
 <br/><br/>
-  <a href="./icy.zip" download>Download the latest version of my open source C-Like lightweight programming language, Icy</a><br/>
+  <a href="./icy.zip" download>Download the latest version of my open source C-Like lightweight programming language, Icy For Linux (MacOS Version coming soon)</a><br/>
   <a href="https://github.com/hnqcjw/SophieTheMaid">Check out a bash-scripted chatbot, SophieTheMaid</a>
   
   <h2>Have a good day!</h2>
