--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <p>This is my GitHub page for all my projects!</p>
   <a href="https://github.com/hnqcjw">Go Check out my GitHub profile</a>
 <br/><br/>
-  <a href="./icy.zip" download>Download the latest version of my open source C-Like lightweight programming language, Icy For Linux (MacOS Version coming soon)</a><br/>
+  <a href="./icy.mac.zip" download>Download the latest version of my open source C-Like lightweight programming language, Icy For MacOS</a><br/>
+  <a href="./icy.linux.zip" download>And For Linux</a>
   <a href="https://github.com/hnqcjw/SophieTheMaid">Check out a bash-scripted chatbot, SophieTheMaid</a>
   
   <h2>Have a good day!</h2>
