--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
   body {
-    font-family: 'Comic Sans MS', sans-serif
+    font-family: 'Comic Sans MS', sans-serif;
     background-color: red;
   }
 </style>
@@ -17,8 +17,8 @@
   <a href="https://github.com/hnqcjw">Go Check out my GitHub profile</a>
 <br/><br/>
   <a href="./icy.mac.zip" download>Download the latest version of my open source C-Like lightweight programming language, Icy For MacOS</a><br/>
-  <a href="./icy.linux.zip" download>And For Linux</a>
-  <a href="https://github.com/hnqcjw/SophieTheMaid">Check out a bash-scripted chatbot, SophieTheMaid</a>
+  <a href="./icy.linux.zip" download>And For Linux</a><br/>
+  <a href="https://github.com/hnqcjw/SophieTheMaid">Also Check out a bash-scripted chatbot, SophieTheMaid</a>
   
   <h2>Have a good day!</h2>
 </body>
