--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
   body {
     font-family: 'Comic Sans MS', sans-serif;
-    background-color: red;
+    background-color: aqua;
   }
 </style>
 <body>
