--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="./icy.mac.zip" download>Download the latest version of my open source C-Like lightweight programming language, Icy For MacOS</a><br/>
   <a href="./icy.linux.zip" download>And For Linux</a><br/>
   <a href="https://github.com/hnqcjw/SophieTheMaid">Also Check out a bash-scripted chatbot, SophieTheMaid</a>
-  
+  <a href="https://hnqcjw.github.io/X86.1110.ASM">X86.1110.ASM, A Kontra.js RPG-Style game you can play right on the web, source code is in profile!</a>
   <h2>Have a good day!</h2>
 </body>
 </html>
